July 8 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Chest and unicorn look better now
	* Corrected The Unicorn of Godly Strength and Speed Spawning Bug
	* Decreased the brightness of palette index 148 by seven in all materialcolorized
	  graphics files (don't ask why)

July 8 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added CreateDivineConfigurations boolean datavalue to all databases, which can be used
	  to add new god-dependent characters, items, materials and terrains very easily,
	  and to define varying attributes and specialities for them. It is now used for
	  angels, kamikaze dwarves, holy books and altars and reduces their overlapping code a lot,
	  and unique holy waters for each god and other similiar wonderful features are
	  a piece of cake with the new system
	* Angel, golem and genie graphics have been converted to humanoids by me. (btw, Kahvi is a moron)
	* All lterrains have been datafiled to glterra.dat and olterra.dat;
	  it is now possible to add new terrains without modifying code and blaah blaah
	* All glterrains have been converted as configurations of solidterrain and liquidterrain
	* Most olterrains have been converted as configurations of wall, decoration and container
	  (the latter holds the bookcase and is reserved for future use)
	* Integrated Kahvi's older looking walls for dungeon rooms
	* Finally integrated Kahvi's new chest picture
	* AnimationController no longer crashes when a full screen DOS prompt is activated in Windows
	* Cheated lookmode wilderness terrain descriptions don't disappear after the first glance anymore
	* Added periods at the end of some of Hex's incomplete messages
	* Corrected a memory leak in the fluid load code
	* Removed the seemingly ever-lasting problems with item's SquareUnder by removing it.
	  Instead, GetSquareUnder() now passes the request for position to Slot
	* The game now aborts if an unrecognized datavalue is found in the datafiles
	  (previously it just discarded it)