@@ -382,6 +382,7 @@
 #define WHITEUNICORNFLESH FIRSTFLESH + 27
 #define LIONFLESH FIRSTFLESH + 28
 #define BUFFALOFLESH FIRSTFLESH + 29
+#define SNAKEFLESH FIRSTFLESH + 29
 
 #define UNARMEDATTACK 0
 #define WEAPONATTACK 1
