@@ -1,3 +1,8 @@
+July 8 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* snake added (although it doesn't work)
+	* angel healing friends fixed.
+
 July 8 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Chest and unicorn look better now
